[package]
name = "aprs"
version = "0.1.0"
edition = "2021"

[dependencies]
indicatif = "0.17.11"
nmea = "0.7.0"
rpi_embedded = "0.1.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.17.1"
tinyvec = "1.9.0"
ssdv = { path = "../ssdv" }
log = "0.4.27"
ftail = "0.2.1"

[patch.crates-io]
rpi_embedded = { path = "./rpi_embedded" }
