[package]
name = "aprs"
version = "0.1.0"
edition = "2021"

[dependencies]
nmea = "0.7.0"
rpi_embedded = "0.1.0"
tinyvec = "1.9.0"
ssdv = { path = "../ssdv" }
log = "0.4.27"
ftail = "0.2.1"
num-bigint = "0.4.6"
thiserror = "2.0.12"
chrono = "0.4.40"

[patch.crates-io]
rpi_embedded = { path = "./rpi_embedded" }
